# tartanpy

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  make.bat
docs/source/: conf.py  index.md  installation.md  usage.ipynb
tests/: test_tartanpy.py
