[tool.poetry]
name = "tartanpy"
version = "0.0.1"
description = "An example of a python package"
authors = ["Benjamin LeRoy"]
license = "MIT"
readme = "README.md"
documentation = "https://tartanpy.readthedocs.io/en/latest/"
homepage = "https://github.com/benjaminleroy/tartanpy"
repository = "https://github.com/benjaminleroy/tartanpy"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
